--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <div class="container">
     <nav class="navbar">
         <div class="left">
-            <img src="emoji.png" alt="">
-            <h3>Umer</h3>
+            <h3>Shahan</h3>
         </div>
         <div class="mid">
             <ul class="navigation">
@@ -31,7 +30,6 @@
             </ul>
         </div>
         <div class="right">
-            <img src="emoji.png" alt="">
             <img src="linkin.png" alt="">
             <img src="hamburg.png" alt="">
         </div>
@@ -40,7 +38,7 @@
     <div class="section">
         <div class="one">
             <h5>I'm</h5>
-            <h1>Muhammad Umer Riaz</h1>
+            <h1>Shahan Nasir</h1>
             <hr>
             <p>A freelancer who provides services for digital programming and design content needs, for all businesses
                 with more than 10 years of experience</p>
@@ -48,7 +46,6 @@
 
         <div class="two">
             <p></p>
-            <img src="Umerpic.png" alt="">
         </div>
 
         <div class="three">
@@ -69,48 +66,7 @@
         <img src="google.png" alt="">
         <img src="linkedin.png" alt="">
         <img src="slack.png" alt="">
-    </div>
 
-    <div class="serv">
-        <div class="left1">
-            <h1> What Can I Do For Your Needs </h1>
-            <p>It is easier to entrust the work to the experts because they are able to provide the best results with
-                reliable quality</p>
-            <div class="num">
-                <div>
-                    <h3>250+</h3>
-                    <p>Project Completed</p>
-                </div>
-                <div class="fsp">
-                    <h3>100+</h3>
-                    <p>Community Network</p>
-                </div>
-            </div>
-            <div class="num1">
-                <h3>30+</h3>
-                <h3 class="fsp">10+</h3>
-            </div>
-        </div>
-        <div class="right1">
-            <div class="img1">
-                <img src="UIUX.jpg" alt="">
-                <p>UI/UX Design
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&rarr;
-                </p>
-            </div>
-            <hr>
-            <div class="img2">
-                <img src="frontend.jpeg" alt="">
-                <p>Front End Develop &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    &rarr;</p>
-            </div>
-            <hr>
-            <div class="img3">
-                <img src="mobile.jpg" alt="">
-                <p>Mobile App Develop &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&rarr;</p>
-            </div>
-        </div>
-    </div>
 </div>
 </body>
 
